--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,7 @@ django-cors-headers==3.8.0
 django-rest-framework==0.1.0
 django-rest-swagger==2.2.0
 djangorestframework==3.12.4
+django-heroku==0.3.1
 gunicorn==20.1.0
 idna==3.2
 itypes==1.2.0
