--- a/requirements.txt
+++ b/requirements.txt
@@ -1,26 +1,35 @@
+appdirs==1.4.4
 asgiref==3.4.1
+attrs==21.4.0
 beautifulsoup4==4.9.3
+cattrs==1.10.0
 certifi==2021.5.30
 charset-normalizer==2.0.4
 coreapi==2.3.3
 coreschema==0.0.4
+dj-database-url==0.5.0
 Django==3.2.7
 django-cors-headers==3.8.0
+django-heroku==0.3.1
 django-rest-framework==0.1.0
 django-rest-swagger==2.2.0
 djangorestframework==3.12.4
-django-heroku==0.3.1
 gunicorn==20.1.0
 idna==3.2
 itypes==1.2.0
 Jinja2==3.0.1
 MarkupSafe==2.0.1
 openapi-codec==1.3.2
+psycopg2==2.9.3
 pytz==2021.1
 PyYAML==5.4.1
 requests==2.26.0
+requests-cache==0.9.1
 simplejson==3.17.5
+six==1.16.0
 soupsieve==2.2.1
 sqlparse==0.4.1
 uritemplate==3.0.1
+url-normalize==1.4.3
 urllib3==1.26.6
+whitenoise==5.3.0
