--- a/requirements.txt
+++ b/requirements.txt
@@ -14,13 +14,19 @@ django-heroku==0.3.1
 django-rest-framework==0.1.0
 django-rest-swagger==2.2.0
 djangorestframework==3.12.4
+finnhub-python==2.4.8
 gunicorn==20.1.0
 idna==3.2
 itypes==1.2.0
 Jinja2==3.0.1
+lxml==4.7.1
 MarkupSafe==2.0.1
+multitasking==0.0.10
+numpy==1.22.2
 openapi-codec==1.3.2
+pandas==1.4.0
 psycopg2==2.9.3
+python-dateutil==2.8.2
 pytz==2021.1
 PyYAML==5.4.1
 requests==2.26.0
@@ -33,3 +39,4 @@ uritemplate==3.0.1
 url-normalize==1.4.3
 urllib3==1.26.6
 whitenoise==5.3.0
+yfinance==0.1.70
